# lieshi_ocr

./: .gitignore  AGENTS.md  README.md  pyproject.toml
_archive/: add_names.py  analyze_codes.py  check_data.py  check_empty_names.py  check_images.py  debug2.py  debug_quotes.py  find_no_names.py  fix_0079_name.py  full_verify.py  scan_diffs.py  test_crop.py  test_parse_corrections.py  test_regex.py  verify_sample.py
docs/: audit_20_sample_name_crop.md  audit_v5.md  cli.md  codex_workflow.md  correction_field_review.md  correction_ocr_review.md  crop_modules.md  data_contract.md  excel_dryrun_apply.md  ocr_audit_report.md  ocr_text_pipeline.md  parse_review_manifest.md  path_management.md  pipeline_crop_batch.md  project_map.md  real_sample_smoke.md  sensitive_history_cleanup.md  story_candidate_audit.md  v6_candidate_generation.md
new_code/: add_mineru_text_to_regions.py  apply_v5_approved_changes.py  batch_region_pipeline.py  batch_region_pipeline_v2.py  create_v5_dry_run_report.py  crop_precheck.py  cut_review_area.py  export_name_mismatch_crops.py  extract_and_rename.py  line_crop_test.py  name_line_crop_check.py  region_pipeline_first3.py  run_region_selected.py  small_region_precheck.py  split_review_regions.py
old_code/: add_names_v2.py  batch_ocr_codes.py  check_corr.py  extract_batch.py  fix_and_review.py  full_compare.py  merge_codes.py  organize.py  process_qixian.py  requirements.txt  run_pipeline.py  verify_fix.py  verify_sampling.py
tests/: test_cli_import.py  test_crop_batch_pipeline.py  test_crop_geometry.py  test_crop_modules.py  test_paths.py  (+12 more)
(+35 files in other folders)
